--- a/Final project/style/style.css
+++ b/Final project/style/style.css
@@ -25,6 +25,7 @@ footer {
     justify-content: space-between;
     align-items: center;
     padding: 2% 10% 2% 10%;
+    background: #EDEDED;
 
 }
 
