--- a/Final project/style/excursion_review.css
+++ b/Final project/style/excursion_review.css
@@ -243,8 +243,9 @@ h2 {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 50%;
+    width: 80%;
     margin-left: 10%;
+    margin-bottom: 155px;
 }
 
 .documents {
@@ -283,6 +284,10 @@ h2 {
     margin-right: 28px;
 }
 
+#for_children {
+    align-items: flex-start;
+}
+
 .for_children_text p {
     margin-top: 20px;
 }
@@ -296,8 +301,237 @@ h2 {
 }
 
 .attention {
-    width: ;
+    width: 100% ;
     height: 131px;
     background: #EDEDED;
     border-radius: 10px;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px;
+    color: #282828;
+    background-image: url(../Images/svg/attention.svg);
+    background-repeat: no-repeat;
+    background-position: right 5% center;
+    padding:  7% 10% 5% 5%;
+   
+}
+
+.title {
+    margin-top: 150px;
+    margin-bottom: 90px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    padding-left: 10%;
+    padding-right: 10%;
+}
+
+.title h3 {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 29px;
+    color: #0499DD;
+}
+
+#see-all {
+    font-size: 12px;
+    text-decoration-line: underline;
+    color: #282828;
+}
+
+#gallery {
+    display: grid;
+    grid-template-columns: 15% 18.5% 25% 18.5% 15%;
+    grid-template-rows: 280px 124px 124px;
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
+    width: 100%;
+    justify-content: center;
+
+}
+
+#photo1,
+#photo4,
+#photo3 {
+    grid-row: 1;
+}
+
+#photo2 {
+    grid-row: 1/4;
+    grid-column: 3;
+}
+
+#photo5,
+#photo8 {
+    grid-row: 2/4;
+}
+
+#photo6 {
+    grid-row: 2;
+}
+
+#photo7 {
+    grid-row: 3
+}
+
+#photo1 {
+    grid-column: 1/3;
+}
+
+#photo3 {
+    grid-column: 4;
+}
+
+#photo4 {
+    grid-column: 5;
+}
+
+#photo5 {
+    grid-column: 1;
+}
+
+#photo6,
+#photo7 {
+    grid-column: 2;
+}
+
+#photo8 {
+    grid-column: 4/6;
+}
+
+#photo1 img,
+#photo2 img,
+#photo3 img,
+#photo4 img,
+#photo5 img,
+#photo6 img,
+#photo7 img,
+#photo8 img {
+    width: 100%;
+    height: 100%;
+}
+
+.booking-form {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.booking {
+    display: flex;
+    flex-direction: column;
+    justify-content: stretch;
+    width: 100%;
+    align-items: center;
+}
+
+#lake {
+    width: 55%;
+    height: 640px;
+}
+
+#lake img {
+    width: 100%;
+    height: 100%;
+}
+
+#to-book {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 50%;
+}
+
+#to-book h3 {
+    font-style: normal;
+font-weight: 700;
+font-size: 24px;
+line-height: 29px;
+color: #0499DD;
+text-align: center;
+margin-bottom: 90px;
+
+}
+
+input {
+    width: 360px;
+    height: 50px;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    border: transparent;
+    padding: 10px;
+    margin-right: 20px;
+    text-align: center;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px;
+    color: #000000;
+    margin-bottom: 20px;
+}
+
+
+input[type="date"]::-webkit-calendar-picker-indicator {
+    display: none;
+}
+
+
+#date {
+    background: url(../Images/svg/calendar.svg) no-repeat;
+    background-position: 90% center;
+}
+
+#people,
+#children-number {
+    background: url(../Images/svg/people.svg) no-repeat;
+    background-position: 90% center;
+}
+
+
+.button-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 230px;
+    height: 50px;
+    background: linear-gradient(92.71deg, #0499DD 0%, #17C1BC 100%);
+    border-radius: 60px;
+    align-items: center;
+}
+
+#arrow1 {
+    width: 14px;
+
+}
+
+#button-text {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 17px;
+    color: #FFFFFF;
+    margin-right: 5px;
+}
+
+.button-to-book {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    height: 50px;
+    align-items: stretch;
+}
+
+.like img {
+    width: 50px;
+    height: 50px;
+    background: #FFFFFF;
+    opacity: 0.3;
+    backdrop-filter: blur(500px);
+    border-radius: 100%;
 }
