--- a/Final project/style/excursion_review.css
+++ b/Final project/style/excursion_review.css
@@ -301,7 +301,7 @@ h2 {
 }
 
 .attention {
-    width: 100% ;
+    width: 100%;
     height: 131px;
     background: #EDEDED;
     border-radius: 10px;
@@ -313,8 +313,8 @@ h2 {
     background-image: url(../Images/svg/attention.svg);
     background-repeat: no-repeat;
     background-position: right 5% center;
-    padding:  7% 10% 5% 5%;
-   
+    padding: 7% 10% 5% 5%;
+
 }
 
 .title {
@@ -448,12 +448,12 @@ h2 {
 
 #to-book h3 {
     font-style: normal;
-font-weight: 700;
-font-size: 24px;
-line-height: 29px;
-color: #0499DD;
-text-align: center;
-margin-bottom: 90px;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 29px;
+    color: #0499DD;
+    text-align: center;
+    margin-bottom: 90px;
 
 }
 
@@ -534,4 +534,49 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     opacity: 0.3;
     backdrop-filter: blur(500px);
     border-radius: 100%;
+}
+
+
+footer {
+    display: flex;
+    flex-direction: row;
+    height: 173px;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2% 10% 2% 10%;
+    background: #EDEDED;
+
+}
+
+.logoColor {
+    width: 80px;
+    height: 114px;
+}
+
+.footerMenu p,
+.footerContacts {
+    display: flex;
+    flex-direction: column;
+}
+
+.footerSM,
+.footerMail,
+.whatsapp,
+.tg,
+.tgBot {
+    display: flex;
+    flex-direction: row;
+}
+
+.tg img,
+.tgBot img,
+.whatsapp img,
+.footerMail img {
+    margin-right: 10px;
+}
+
+.footerSM {
+    width: 120px;
+    justify-content: space-between;
 }
