--- a/Final project/style/style.css
+++ b/Final project/style/style.css
@@ -17,6 +17,7 @@ header {
     background-size: 100%;
 }
 
+
 footer {
     display: flex;
     flex-direction: row;
@@ -93,7 +94,7 @@ menu {
 #main-page:hover,
 #excursion-page:hover,
 #account:hover {
-    color:#FFC700
+    color: #FFC700
 }
 
 #travel {
@@ -142,26 +143,6 @@ menu {
     height: 110px;
 }
 
-
-.button-header {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    width: 230px;
-    height: 50px;
-    background: linear-gradient(92.71deg, #0499DD 0%, #17C1BC 100%);
-    border-radius: 60px;
-    position: absolute;
-    left: 10%;
-    top: 65%;
-    align-items: center;
-}
-
-#arrow1 {
-    width: 14px;
-
-}
-
 #button-text {
     font-family: 'Montserrat';
     font-style: normal;
@@ -170,6 +151,48 @@ menu {
     line-height: 17px;
     color: #FFFFFF;
     margin-right: 5px;
+}
+
+.button-header {
+    width: 230px;
+    height: 50px;
+    background: linear-gradient(92.71deg, #0499DD 0%, #17C1BC 100%);
+    border-radius: 60px;
+    justify-content: center;
+    display: flex;
+    flex-direction: row;
+    transition: all 0.2s ease-in-out;
+    position: absolute;
+    left: 10%;
+    top: 65%;
+    align-items: center;
+}
+
+button {
+    border: none;
+    border-radius: 60px;
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    color: #FFFFFF;
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
+}
+
+.button-header:hover,
+button:hover {
+    background: linear-gradient(92.71deg, #FFC700 0%, #ffcc99 100%);
+    ;
+    color: #FFFFFF;
+}
+
+#arrow1 {
+    margin-left: 10px;
+    width: 14px
 }
 
 .title {
@@ -195,10 +218,19 @@ menu {
 
 #see-all {
     font-size: 12px;
-    text-decoration-line: underline;
-    color: #282828;
 }
 
+#see-all a {
+    text-decoration: underline;
+    color: #282828;
+
+}
+
+#see-all a:hover {
+    color: #0499DD;
+    font-weight: bold;
+    text-decoration-color: #0499DD;
+}
 
 .about-us {
     width: 74%;
@@ -223,7 +255,6 @@ menu {
 
 article {
     padding: 7%;
-
 }
 
 article h3 {
@@ -304,16 +335,23 @@ article p {
 }
 
 .button-excursion {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
     width: 230px;
     height: 50px;
     background: linear-gradient(92.71deg, #0499DD 0%, #17C1BC 100%);
     border-radius: 60px;
-    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: row;
+    transition: all 0.2s ease-in-out;
     margin: auto;
     margin-top: 20px;
+}
+
+.button-excursion:hover,
+button:hover {
+    background: linear-gradient(92.71deg, #FFC700 0%, #ffcc99 100%);
+    ;
+    color: #FFFFFF;
 }
 
 #gallery {
@@ -388,6 +426,18 @@ article p {
     height: 100%;
 }
 
+#photo1 img:hover,
+#photo2 img:hover,
+#photo3 img:hover,
+#photo4 img:hover,
+#photo5 img:hover,
+#photo6 img:hover,
+#photo7 img:hover,
+#photo8 img:hover {
+    transform: scale(1.1);
+    transition: 1.5s;
+}
+
 .questions {
     width: 100%;
     height: 640px;
@@ -436,12 +486,19 @@ form {
     color: #FFFFFF
 }
 
-form input {
+form input,
+form input:focus  {
     background: transparent;
     width: 100%;
     border: none;
+    outline: none;
+    color: #FFFFFF;
+    font-size: 14px;
+    margin-left: 10px;
+    background-color: transparent;
+
 }
 
-#request{
+#request {
     margin-bottom: 45px;
 }
