--- a/Final project/style/style.css
+++ b/Final project/style/style.css
@@ -147,6 +147,7 @@ menu {
 .logo-buttons button:hover {
     border: none;
     background: transparent;
+    cursor: pointer;
 }
 
 .logo-buttons button:hover #fb-logo {
@@ -191,7 +192,7 @@ menu {
     border-radius: 60px;
     width: 100%;
     height: 100%;
-    background: transparent;
+    background: linear-gradient(92.71deg, #0499DD 0%, #17C1BC 100%);
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 700;
@@ -365,8 +366,23 @@ article p {
     margin-top: 20px;
 }
 
+#button-text {
+    border: none;
+    border-radius: 60px;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(92.71deg, #0499DD 0%, #17C1BC 100%);
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    color: #FFFFFF;
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
+}
+
 .button-excursion:hover,
-button:hover {
+#button-text:hover {
     background: linear-gradient(92.71deg, #FFC700 0%, #ffcc99 100%);
     ;
     color: #FFFFFF;
