--- a/Final project/style/excursion_style.css
+++ b/Final project/style/excursion_style.css
@@ -65,19 +65,23 @@ menu {
     width: 100%;
 }
 
+
 #place {
     background: url(../Images/svg/place.svg) no-repeat;
     background-position: 90% center;
+    width: 100%;
 }
 
 #date {
     background: url(../Images/svg/calendar.svg) no-repeat;
     background-position: 90% center;
+    width: 100%;
 }
 
 #people {
     background: url(../Images/svg/people.svg) no-repeat;
     background-position: 90% center;
+    width: 100%;
 }
 
 form input,
@@ -189,7 +193,7 @@ form {
 
 }
 
-input {
+input:not([type="range"]) {
     width: 235px;
     height: 50px;
     background: #FFFFFF;
@@ -205,19 +209,20 @@ input {
     color: #000000;
 }
 
-
 input[type="date"]::-webkit-calendar-picker-indicator {
-    display: none;
+   display: none;
 }
 
 aside {
     margin-top: 38px;
-    width: 21%;
-    height: 1018px;
+   height: auto;
     background: #FFFFFF;
     box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
-    padding: 2% 3% 2% 3%;
+    padding: 2%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 aside h2 {
@@ -551,3 +556,254 @@ footer {
     grid-column: 2/5;
 }
 
+aside {
+    width: 30%;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.05);
+    border-radius: 10px;
+    height: 1018px;
+}
+
+aside h2 {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 17px;
+    color: #0499DD;
+}
+
+aside p {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 17px;
+    color: #282828;
+}
+
+.costs,
+.people-quantity,
+.place,
+.duration,
+.date {
+    padding: 5px 5px 20px 5px;
+    margin-bottom: 20px;
+    border-bottom: 1px solid #EDEDED;
+}
+
+.wrapper {
+    width: 100%;
+}
+
+.container {
+    position: relative;
+    width: 100%;
+    height: 40px;
+
+}
+
+input[type="range"] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    width: 100%;
+    outline: none;
+    position: absolute;
+    margin: auto;
+    top: 0;
+    bottom: 0;
+    background-color: transparent;
+    pointer-events: none;
+}
+
+.slider-track {
+    width: 100%;
+    height: 5px;
+    position: absolute;
+    margin: auto;
+    top: 0;
+    bottom: 0;
+    border-radius: 5px;
+}
+
+input[type="range"]::-webkit-slider-runnable-track {
+    -webkit-appearance: none;
+    height: 5px;
+}
+
+input[type="range"]::-moz-range-track {
+    -moz-appearance: none;
+    height: 5px;
+}
+
+input[type="range"]::-ms-track {
+    appearance: none;
+    height: 5px;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    height: 1.7em;
+    width: 1.7em;
+    background-color: #0499DD;
+    cursor: pointer;
+    margin-top: -9px;
+    pointer-events: auto;
+    border-radius: 50%;
+}
+
+input[type="range"]::-moz-range-thumb {
+    -webkit-appearance: none;
+    height: 1.7em;
+    width: 1.7em;
+    cursor: pointer;
+    border-radius: 50%;
+    background-color: #0499DD;
+    pointer-events: auto;
+}
+
+input[type="range"]::-ms-thumb {
+    appearance: none;
+    height: 1.7em;
+    width: 1.7em;
+    cursor: pointer;
+    border-radius: 50%;
+    background-color: #0499DD;
+    pointer-events: auto;
+}
+
+input[type="range"]:active::-webkit-slider-thumb {
+    background-color: #ffffff;
+    border: 3px solid #0499DD;
+}
+
+.values {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+    background-color: #ffffff;
+    width: 100%;
+    padding: 10px 0;
+
+}
+
+.values span {
+    background: #FFFFFF;
+    border: 1px solid #EDEDED;
+    border-radius: 40px;
+    color: #282828;
+    font-size: 12px;
+    width: 105px;
+    height: 30px;
+    text-align: center;
+    padding-top: 3%;
+    box-sizing: border-box;
+}
+
+.checkbox {
+    width: 73px;
+    height: 30px;
+    background: #FFFFFF;
+    border: 1px solid #EDEDED;
+    border-radius: 40px;
+}
+
+.checkbox:hover {
+    background: #0499DD;
+}
+
+.quantity-checkboxes {
+    display: grid;
+    grid-column: 3;
+    grid-row: 4;
+    width: 20%;
+}
+
+#quantity-checkbox1,
+#quantity-checkbox2,
+#quantity-checkbox3 {
+    grid-row: 1;
+}
+
+#quantity-checkbox4,
+#quantity-checkbox5,
+#quantity-checkbox6 {
+    grid-row: 2;
+}
+
+#quantity-checkbox7,
+#quantity-checkbox8,
+#quantity-checkbox9 {
+    grid-row: 3;
+}
+
+#quantity-checkbox10,
+#quantity-checkbox11 {
+    grid-row: 4;
+}
+
+#quantity-checkbox1,
+#quantity-checkbox4,
+#quantity-checkbox7,
+#quantity-checkbox10 {
+    grid-column: 1;
+}
+
+#quantity-checkbox2,
+#quantity-checkbox5,
+#quantity-checkbox8 {
+    grid-column: 2;
+}
+
+#quantity-checkbox3,
+#quantity-checkbox6,
+#quantity-checkbox9 {
+    grid-column: 3;
+}
+
+#quantity-checkbox11 {
+    grid-column: 2/5
+}
+
+label {
+    text-align: center;
+    padding-top: 6px;
+    box-sizing: border-box;
+    color: #282828;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    margin-bottom: 5px;
+    margin-right: 5px;
+}
+
+.place {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.place input {
+    width: auto;
+    height: auto;
+    color: #282828;
+    margin-right: 5px;
+}
+
+.place label {
+    width: auto;
+    height: auto;
+    display: inline-block;
+    padding: 0%;
+}
+
+.place p {
+    margin: 2px;
+}
+
+.checkbox [type="radio"] {
+    display: none;
+}
+
+aside .button-with-like {
+    margin-bottom: 20px;
+    height: 50px;
+}
