--- a/Final project/style/style.css
+++ b/Final project/style/style.css
@@ -224,8 +224,50 @@ menu {
     width: 14px
 }
 
-.title {
+.video {
+    width: 300px;
+    height: 190px;
+    padding: 0;
+    position: relative;
+    right: -70%
+}
 
+video {
+    
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(.jpg);
+    border-radius: 10px;
+    height: 100%;
+    width: 100%;
+    margin: 0;
+}
+
+#playButton {
+    position: absolute;
+    top: 40%;
+    left: 40%;
+    width: 20%;
+    height: 20%;
+    background: transparent;
+    border: none;
+}
+
+#playButton img {
+    width: 100%;
+    height: 100%;
+}
+
+#closeVideo {
+    position: absolute;
+    bottom: 100%;
+    left: 100%;
+    transform: rotate(45deg);
+    background: transparent;
+    border: none;
+    right: 100%;
+    display: none;
+}
+
+.title {
     margin-top: 150px;
     margin-bottom: 90px;
     display: flex;
