--- a/Final project/style/excursion_review.css
+++ b/Final project/style/excursion_review.css
@@ -71,6 +71,15 @@ menu {
 
 }
 
+.button-to-book {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    margin-top: 15px;
+    width: 35%;
+}
+
 .button-with-like {
     display: flex;
     flex-direction: row;
@@ -81,7 +90,6 @@ menu {
     position: absolute;
     left: 10%;
     top: 65%;
-
 }
 
 .button-like {
@@ -552,16 +560,25 @@ input {
     margin-bottom: 20px;
 }
 
+.booking input,
+.booking input:focus {
+    background: transparent;
+    border: none;
+    outline: none;
+    color: #282828;
+    font-size: 14px;
+    background-color: transparent;
+}
+
 
 input[type="date"]::-webkit-calendar-picker-indicator {
-    display: none;
-}
-
-
-#date {
+    opacity: 1;
+    color: white;
     background: url(../Images/svg/calendar.svg) no-repeat;
-    background-position: 90% center;
+    width: 20px;
+    height: 20px;
 }
+
 
 #people,
 #children-number {
@@ -596,14 +613,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     margin-right: 5px;
 }
 
-.button-to-book {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    width: 100%;
-    height: 50px;
-    align-items: stretch;
-}
+
 
 .like img {
     width: 50px;
@@ -668,4 +678,3 @@ footer {
     font-size: 14px;
     line-height: 17px;
 }
-
