--- a/Final project/style/excursion_review.css
+++ b/Final project/style/excursion_review.css
@@ -71,15 +71,6 @@ menu {
 
 }
 
-.button-to-book {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-    margin-top: 15px;
-    width: 35%;
-}
-
 .button-with-like {
     display: flex;
     flex-direction: row;
@@ -90,6 +81,15 @@ menu {
     position: absolute;
     left: 10%;
     top: 65%;
+}
+
+.button-with-like2 {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    margin-top: 15px;
+    width: 35%;
 }
 
 .button-like {
@@ -118,10 +118,9 @@ button {
     transition: all 0.2s ease-in-out;
 }
 
-.button-like:hover,
+
 button:hover {
     background: linear-gradient(92.71deg, #FFC700 0%, #ffcc99 100%);
-    ;
     color: #FFFFFF;
 }
 
@@ -229,10 +228,22 @@ label {
     margin-left: 132px;
 }
 
+#article-slider {
+    display: flex;
+    flex-direction: row;
+    margin-top: 150px;
+    margin-bottom: 170px ;
+}
+
+#slider{
+    width: 45%;
+    height: 500px;
+    border-radius: 10%;
+}
+
 .route_description {
     width: 40%;
     text-align: justify;
-    margin-bottom: 150px;
     margin-left: 10%;
 }
 
@@ -242,7 +253,6 @@ label {
     font-size: 24px;
     line-height: 29px;
     color: #0499DD;
-    margin-top: 210px;
 }
 
 .route_description li::marker {
@@ -260,6 +270,7 @@ label {
     text-align: justify;
     list-style-position: outside;
     display: list-item;
+    margin-bottom: 20px;
 }
 
 .route_description p {
@@ -598,6 +609,13 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     align-items: center;
 }
 
+#button-text:hover,
+button:hover,
+.button-like:hover {
+    background: linear-gradient(92.71deg, #FFC700 0%, #ffcc99 100%);
+    color: #FFFFFF;
+}
+
 #arrow1 {
     width: 14px;
 
@@ -611,6 +629,11 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     line-height: 17px;
     color: #FFFFFF;
     margin-right: 5px;
+    width: 230px;
+    height: 50px;
+    background: linear-gradient(92.71deg, #0499DD 0%, #17C1BC 100%);
+    border-radius: 60px;
+    align-items: center;
 }
 
 
@@ -677,4 +700,78 @@ footer {
     font-weight: 500;
     font-size: 14px;
     line-height: 17px;
+}
+
+
+  /* Slideshow container */
+  .slideshow-container {
+    width: 300px;
+    height: 480px;
+    position: relative;
+    margin: auto;
+    display: flex;
+    flex-direction: row;
+    overflow: hidden;
+    border-radius: 15px;
+}
+
+/* Hide the images by default */
+.mySlides {
+    display: block;
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+    cursor: pointer;
+    position: absolute;
+    width: auto;
+    color: #0499DD;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+    right: 35%;
+    border-radius: 3px 0 0 3px;
+}
+
+.prev {
+     left: 62%;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+    background-color: transparent;
+}
+
+
+
+
+
+
+/* Fading animation */
+.fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@keyframes fade {
+    from {
+        opacity: .4
+    }
+
+    to {
+        opacity: 1
+    }
+}
+
+.mySlides fade,
+.mySlides img {
+   height: 500px;
 }
