--- a/Home_work_5/index.css
+++ b/Home_work_5/index.css
@@ -6,6 +6,57 @@
   display: none;
 }
 
+header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background: #F1EFEF;
+  width: 100%;
+  height: 50px;
+  margin-top: 50px;
+}
+
+#title {
+  font-weight: bold;
+  font-size: large;
+  margin: 10px;
+}
+
+form {
+  display: flex;
+  flex-direction: row;
+}
+
+#your-cart,
+.seach-input,
+.btn-search {
+  border-radius: 5px;
+  border: solid #048913 1px;
+  margin: 10px;
+}
+
+#your-cart {
+  background: #048913;
+  color: white;
+  width:150px;
+  text-align: center;
+}
+
+.seach-input {
+  width: 150px;
+  height: 30px;
+  color: gray;
+}
+
+.btn-search {
+  width: 70px;
+  height: 30px;
+  background: transparent;
+  text-decoration: none;
+  color: #048913;
+  text-align: center;
+}
+
 #main-container {
   display: flex;
   flex-direction: row;
@@ -24,7 +75,7 @@
 }
 
 .card-img-top {
-  width: 100%;
+  
   height: 30%;
   margin-bottom: 5px;
 }
