--- a/JS_Home_work_6/index.css
+++ b/JS_Home_work_6/index.css
@@ -38,7 +38,7 @@ form {
 #your-cart {
   background: #048913;
   color: white;
-  width:150px;
+  width: 150px;
   text-align: center;
 }
 
@@ -74,7 +74,7 @@ form {
 }
 
 .card-img-top {
-  
+
   height: 30%;
   margin-bottom: 5px;
 }
@@ -109,3 +109,124 @@ form {
   font-size: small;
   height: 40%;
 }
+
+.main-container {
+  width: 50%;
+  height: 50%;
+  padding: 10px;
+  border: solid grey 1px;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  display: none;
+  position: fixed;
+  left: 25%;
+  top: 20%;
+  z-index: 1;
+  overflow: auto;
+  background: white;
+}
+
+.order,
+.item-information,
+.total-price {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.item-information {
+  justify-content: space-between;
+  border: solid 1px grey;
+  border-radius: 5px;
+  padding: 3%;
+}
+
+.order {
+  justify-content: space-between;
+  align-items: center;
+}
+
+.delete-btn {
+  background: red;
+  border-radius: 5px;
+  color: white;
+  font-weight: bold;
+  text-decoration: none;
+  padding: 5px;
+  text-align: center;
+}
+
+.total-price {
+  justify-content: end;
+  font-weight: bold;
+}
+
+.order-btn {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 40px;
+  color: white;
+  background: blue;
+  border-radius: 5px;
+  text-align: center;
+  font-weight: bold;
+  padding: 1%;
+  text-decoration: none;
+}
+
+.close-btn {
+  border-radius: 3px;
+  background: #DADDDD;
+  width: 15px;
+  text-align: center;
+  font-size: 13px;
+  text-decoration: none;
+  color: black;
+}
+
+.quantity-price,
+.common-price-quantity {
+  display: flex;
+  flex-direction: row;
+}
+
+.common-price-quantity {
+  background: blue;
+  color: white;
+  font-weight: bold;
+  border-radius: 3px;
+  text-align: center;
+}
+
+.quantity-price {
+  justify-content: space-between;
+  align-items: center;
+}
+
+.minus-quantity,
+.common-price-quantity,
+.plus-quantity {
+  margin: 5px;
+}
+
+.minus-quantity,
+.plus-quantity {
+  background: grey;
+  color: white;
+  font-weight: bold;
+  border-radius: 3px;
+  width: 20px;
+  text-align: center;
+}
+
+.is-quantity,
+.multiply,
+.is-price {
+  margin: 3px;
+}
+
