--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
-.main-table{
-    background: url(/images/2302.w026.n002.3128B.p1.3128.jpg);
+.main-table {
+    width: 90%;
+    background-image: url(2302.w026.n002.3128B.p1.3128.jpg);
 }
