--- a/style.css
+++ b/style.css
@@ -1,4 +1,42 @@
+body {
+    box-sizing: border-box;
+}
+
+header {
+    width: 90%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 30px;
+    margin: auto;
+}
+
+header input {
+    width: 200px;
+    height: 20px;
+}
+
 .main-table {
     width: 90%;
-    background-image: url(2302.w026.n002.3128B.p1.3128.jpg);
+    height: 400px;
+    background: center no-repeat;
+    background-image: url("6220925.jpg");
+    background-size: cover;
+    border: solid 1px black;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    border-radius: 20px;
+    font-family: 'Poppins', sans-serif;
+    color: white;
+    padding: 300px 20px 20px 20px;
+    box-sizing: border-box;
+    font-weight: bold;
+    box-shadow: 0px 0px 30px #99606A;
+    margin: auto;
+}
+
+.weather-parameters {
+    display: flex;
+    flex-direction: column;
 }
