--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ header input {
     background: center no-repeat;
     background-image: url("6220925.jpg");
     background-size: cover;
-    border: solid 1px black;
+    border: solid 1px #99606A;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -37,6 +37,44 @@ header input {
 }
 
 .weather-parameters {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    width: 30%;
+    border: solid 1px #99606A;
+    border-radius: 20px;
+    padding: 20px;
+    box-sizing: border-box;
+}
+
+.humidity > svg,
+.sunset > svg {
+    grid-row: 1/2;
+    grid-column: 1;
+}
+
+.uv-index > svg,
+.sunrise > svg {
+    grid-row: 3/4;
+    grid-column: 3
+}
+
+#humidity-data,
+#sunset-time {
+    grid-row: 2;
+}
+
+#uv-data,
+#sunrise-time {
+    grid-row: 4;
+}
+
+#humidity-title {
+    grid-column: 2;
+    grid-row: 1;
+}
+
+#sunset-title {
+    grid-column: 4;
+    grid-row: 1;
 }
