--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
 body {
     box-sizing: border-box;
+    font-family: "Poppins";
+}
+
+h1 {
+    color: #78304f;
+    font-weight: 700;
 }
 
 header {
@@ -7,13 +13,25 @@ header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     padding: 30px;
     margin: auto;
 }
 
 header input {
-    width: 200px;
+    width: 20%;
     height: 20px;
+    border: 1px solid #78304f;
+    border-radius: 5px;
+}
+
+header input[type="text"] {
+    color: #49484a;
+    padding-right: 10px;
+    background: url(search.svg) center left 97%;
+    background-repeat: no-repeat;
+    font-family: "Poppins";
+    font-weight: 500;
 }
 
 .main-table {
@@ -37,44 +55,169 @@ header input {
 }
 
 .weather-parameters {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
-    width: 30%;
-    border: solid 1px #99606A;
+    border: 1px solid #99606A;
     border-radius: 20px;
-    padding: 20px;
-    box-sizing: border-box;
+    width: 350px;
+    height: auto;
+    display: grid;
+    grid-template-columns: 60px 100px 30px 60px 100px;
+    grid-template-rows: 20px 20px 20px 20px;
+    grid-gap: 5px;
+    align-items: center;
+    text-align: left;
+    margin: auto;
+    padding: 5px;
 }
 
-.humidity > svg,
-.sunset > svg {
-    grid-row: 1/2;
+.weather-parameters div {
+    border: none;
+    height: auto;
+}
+
+.weather-parameters svg {
+    height: 40px;
+    width: 50px;
+    margin-left: 3px;
+}
+
+#one {
     grid-column: 1;
+    grid-row-start: 1;
+    grid-row-end: 3;
 }
 
-.uv-index > svg,
-.sunrise > svg {
-    grid-row: 3/4;
-    grid-column: 3
-}
-
-#humidity-data,
-#sunset-time {
-    grid-row: 2;
-}
-
-#uv-data,
-#sunrise-time {
-    grid-row: 4;
-}
-
-#humidity-title {
+#two {
     grid-column: 2;
     grid-row: 1;
 }
 
-#sunset-title {
+#three {
+    grid-column: 2;
+    grid-row: 2;
+}
+
+#four {
     grid-column: 4;
+    grid-row: 1/3;
+}
+
+#five {
+    grid-column: 5;
+    grid-row: 1;
+}
+
+#six {
+    grid-column: 5;
+    grid-row: 2;
+}
+
+#seven {
+    grid-column: 1;
+    grid-row: 3/5;
+}
+
+#eight {
+    grid-column: 2;
+    grid-row: 3;
+}
+
+#nine {
+    grid-column: 2;
+    grid-row: 4;
+}
+
+#ten {
+    grid-column: 4;
+    grid-row: 3/5;
+}
+
+#eleven {
+    grid-column: 5;
+    grid-row: 3;
+}
+
+#twelve {
+    grid-column: 5;
+    grid-row: 4;
+}
+
+#line {
+    grid-column: 3;
+    grid-row: 1/5;
+    border-left: 2px solid #99606A;
+    width: 30px;
+    height: 100%;
+}
+
+.rainfall {
+    display: grid;
+    grid-template-columns: 150px 100px;
+    grid-template-rows: 40px 40px;
+    border: 1px solid #99606A;
+    border-radius: 20px;
+    width: 280px;
+    height: 100px;
+    box-sizing: border-box;
+    padding: 10px;
+    align-items: center;
+    text-align: left;
+    align-content: center;
+    justify-content: center;
+    color: #FEFEFE;
+    background: linear-gradient(to left top, #78304f, #7e3856, #85405d, #8b4765, #924f6c);
+}
+
+#rainfall-title {
+    grid-column: 1;
+    grid-row: 1;
+}
+
+#his-year-rainfall {
+    grid-column: 2;
+    grid-row: 1;
+}
+
+#rainfall-data {
+    grid-column: 1;
+    grid-row: 2;
+}
+
+#rainfall-changes {
+    grid-column: 2;
+    grid-row: 2;
+}
+
+.weather-of-week {
+    display: grid;
+    grid-template-columns: repeat(7 60px);
+    grid-auto-rows: repeat(3 50px);
+}
+
+.monday{
+    grid-column: 1;
+    grid-row: 1;
+}
+.tuesday{
+    grid-column: 2;
+    grid-row: 1;
+}
+.wednesday{
+    grid-column: 3;
+    grid-row: 1;
+}
+.thursday{
+    grid-column: 4;
+    grid-row: 1;
+}
+.friday{
+    grid-column: 5;
+    grid-row: 1;
+}
+.saturday{
+    grid-column: 6;
+    grid-row: 1;
+}
+.sunday{
+    grid-column: 7;
     grid-row: 1;
 }
