--- a/style.css
+++ b/style.css
@@ -47,26 +47,33 @@ header input[type="text"] {
     border-radius: 20px;
     font-family: 'Poppins', sans-serif;
     color: white;
-    padding: 300px 20px 20px 20px;
+    padding: 100px 20px 20px 20px;
     box-sizing: border-box;
     font-weight: bold;
     box-shadow: 0px 0px 30px #99606A;
     margin: auto;
+    font-family: "Poppins";
+    align-items: flex-end;
+}
+
+.main-table svg {
+    width: 60px;
+    height: 60px;
 }
 
 .weather-parameters {
     border: 1px solid #99606A;
     border-radius: 20px;
-    width: 350px;
+    width: 90%;
     height: auto;
     display: grid;
-    grid-template-columns: 60px 100px 30px 60px 100px;
+    grid-template-columns: 50px 100px 5px 50px 100px;
     grid-template-rows: 20px 20px 20px 20px;
     grid-gap: 5px;
     align-items: center;
     text-align: left;
-    margin: auto;
     padding: 5px;
+    justify-content: space-between;
 }
 
 .weather-parameters div {
@@ -89,6 +96,7 @@ header input[type="text"] {
 #two {
     grid-column: 2;
     grid-row: 1;
+    font-weight: bold;
 }
 
 #three {
@@ -104,6 +112,7 @@ header input[type="text"] {
 #five {
     grid-column: 5;
     grid-row: 1;
+    font-weight: bold;
 }
 
 #six {
@@ -119,6 +128,7 @@ header input[type="text"] {
 #eight {
     grid-column: 2;
     grid-row: 3;
+    font-weight: bold;
 }
 
 #nine {
@@ -134,6 +144,7 @@ header input[type="text"] {
 #eleven {
     grid-column: 5;
     grid-row: 3;
+    font-weight: bold;
 }
 
 #twelve {
@@ -155,14 +166,14 @@ header input[type="text"] {
     grid-template-rows: 40px 40px;
     border: 1px solid #99606A;
     border-radius: 20px;
-    width: 280px;
+    width: 90%;
     height: 100px;
     box-sizing: border-box;
     padding: 10px;
     align-items: center;
     text-align: left;
     align-content: center;
-    justify-content: center;
+    justify-content: space-between;
     color: #FEFEFE;
     background: linear-gradient(to left top, #78304f, #7e3856, #85405d, #8b4765, #924f6c);
 }
@@ -189,35 +200,91 @@ header input[type="text"] {
 
 .weather-of-week {
     display: grid;
-    grid-template-columns: repeat(7 60px);
-    grid-auto-rows: repeat(3 50px);
+    width: 90%;
+    height: 200px;
+    border: 1px solid #99606A;
+    border-radius: 20px;
+    padding: 10px;
+    align-content: space-around;
+    justify-content: space-around;
+    font-family: "Poppins";
+}
+
+.weather-of-week img {
+    width: 30px;
+    height: 30px;
 }
 
 .monday{
     grid-column: 1;
     grid-row: 1;
+    font-weight: bold;
 }
 .tuesday{
     grid-column: 2;
     grid-row: 1;
+    font-weight: bold;
 }
 .wednesday{
     grid-column: 3;
     grid-row: 1;
+    font-weight: bold;
 }
 .thursday{
     grid-column: 4;
     grid-row: 1;
+    font-weight: bold;
 }
 .friday{
     grid-column: 5;
     grid-row: 1;
+    font-weight: bold;
 }
 .saturday{
     grid-column: 6;
     grid-row: 1;
+    font-weight: bold;
 }
 .sunday{
     grid-column: 7;
     grid-row: 1;
+    font-weight: bold;
+}
+.container{
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 1fr 1fr;
+    margin: auto;
+    margin-top: 20px;
+    padding: 1%;
+    width: 90%;
+    grid-gap: 20px
+}
+
+.weather-parameters {
+    grid-column: 1;
+    grid-row: 1;
+}
+
+.weather-parameters svg {
+    fill: #78304f;
+}
+
+.rainfall {
+    grid-column: 1;
+    grid-row: 2;
+}
+.weather-of-week {
+    grid-column: 2;
+    grid-row: 1/3;
+}
+.temperature {
+    font-size: 70px;
+}
+.location {
+    font-size: 30px;
+}
+.time,
+.sunset-time {
+    font-size: 25px;
 }
