--- a/style.css
+++ b/style.css
@@ -285,6 +285,7 @@ header input[type="text"] {
     font-size: 30px;
 }
 .sunset,
-.sunset-time {
+.sunset-time,
+#today-day {
     font-size: 25px;
 }
