--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
-body {
+#main-container {
     box-sizing: border-box;
     font-family: "Poppins";
+    margin: 0 auto;
 }
 
 h1 {
@@ -47,16 +48,26 @@ header input[type="text"] {
     border-radius: 20px;
     font-family: 'Poppins', sans-serif;
     color: white;
-    padding: 100px 20px 20px 20px;
+    padding: 20px 20px 20px 20px;
     box-sizing: border-box;
     font-weight: bold;
     box-shadow: 0px 0px 30px #99606A;
     margin: auto;
     font-family: "Poppins";
     align-items: flex-end;
+
 }
 
-.main-table svg {
+.todayWeather {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    box-sizing: border-box;
+}
+
+.todayWeather img {
     width: 60px;
     height: 60px;
 }
@@ -74,6 +85,11 @@ header input[type="text"] {
     text-align: left;
     padding: 5px;
     justify-content: space-between;
+}
+
+#weather-icon {
+    width: 100px;
+    height: 100px;
 }
 
 .weather-parameters div {
@@ -160,10 +176,10 @@ header input[type="text"] {
     height: 100%;
 }
 
-.rainfall {
+.max-min-temperature {
     display: grid;
-    grid-template-columns: 150px 100px;
-    grid-template-rows: 40px 40px;
+    grid-template-columns: 25% 25% 25% 25% ;
+    grid-template-rows: 30px 25px 25px;
     border: 1px solid #99606A;
     border-radius: 20px;
     width: 90%;
@@ -174,28 +190,58 @@ header input[type="text"] {
     text-align: left;
     align-content: center;
     justify-content: space-between;
+    justify-items: center;
     color: #FEFEFE;
     background: linear-gradient(to left top, #78304f, #7e3856, #85405d, #8b4765, #924f6c);
 }
 
-#rainfall-title {
-    grid-column: 1;
+#max-temp-title {
+    grid-column: 1/3;
     grid-row: 1;
 }
 
-#his-year-rainfall {
-    grid-column: 2;
+#min-temp-title {
+    grid-column: 3/5;
     grid-row: 1;
 }
 
-#rainfall-data {
-    grid-column: 1;
-    grid-row: 2;
+#max-temp-title,
+#min-temp-title {
+    font-size: 20px;
+    text-align: center;
+    font-weight: bold;
 }
 
-#rainfall-changes {
+#max-temp-data {
     grid-column: 2;
-    grid-row: 2;
+    grid-row: 2/4;
+}
+
+#min-temp-data {
+    grid-column: 4;
+    grid-row: 2/4;
+}
+
+#min-temp-data,
+#max-temp-data {
+    font-size: 25px;
+
+}
+
+#max-temp-icon {
+    grid-column: 1;
+    grid-row: 2/4;
+}
+
+#min-temp-icon {
+    grid-column: 3;
+    grid-row: 2/4;
+}
+
+#min-temp-icon,
+#max-temp-icon {
+    height: 25px;
+    width: 25px;
 }
 
 .weather-of-week {
@@ -279,10 +325,10 @@ header input[type="text"] {
     grid-row: 1/3;
 }
 .todayTemperature {
-    font-size: 70px;
+    font-size: 40px;
 }
 .location {
-    font-size: 30px;
+    font-size: 20px;
 }
 .sunset,
 .sunset-time,
