--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ header {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 30px;
+    padding: 20px;
     margin: auto;
 }
 
@@ -75,7 +75,6 @@ header input[type="text"] {
 .weather-parameters {
     border: 1px solid #99606A;
     border-radius: 20px;
-    width: 90%;
     height: auto;
     display: grid;
     grid-template-columns: 50px 100px 5px 50px 100px;
@@ -182,8 +181,6 @@ header input[type="text"] {
     grid-template-rows: 30px 25px 25px;
     border: 1px solid #99606A;
     border-radius: 20px;
-    width: 90%;
-    height: 100px;
     box-sizing: border-box;
     padding: 10px;
     align-items: center;
@@ -244,11 +241,11 @@ header input[type="text"] {
     width: 25px;
 }
 
-.weather-of-week {
-    display: grid;
-    width: 90%;
-    height: 200px;
-    border: 1px solid #99606A;
+
+.forecast-container{
+    display: flex;
+    flex-direction: row;
+    border: solid 1px #99606A;
     border-radius: 20px;
     padding: 10px;
     align-content: space-around;
@@ -256,60 +253,38 @@ header input[type="text"] {
     font-family: "Poppins";
 }
 
-.weather-of-week img {
-    width: 30px;
-    height: 30px;
+.day-forecast{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 5px;
+    text-align: center;
 }
 
-.monday{
-    grid-column: 1;
-    grid-row: 1;
-    font-weight: bold;
-}
-.tuesday{
-    grid-column: 2;
-    grid-row: 1;
-    font-weight: bold;
-}
-.wednesday{
-    grid-column: 3;
-    grid-row: 1;
-    font-weight: bold;
-}
-.thursday{
-    grid-column: 4;
-    grid-row: 1;
-    font-weight: bold;
-}
-.friday{
-    grid-column: 5;
-    grid-row: 1;
-    font-weight: bold;
-}
-.saturday{
-    grid-column: 6;
-    grid-row: 1;
-    font-weight: bold;
-}
-.sunday{
-    grid-column: 7;
-    grid-row: 1;
-    font-weight: bold;
-}
+
 .container{
+    width: 90%;
+    margin: 0 auto;
+    margin-top: 30px;
     display: grid;
     grid-template-columns: 50% 50%;
-    grid-template-rows: 1fr 1fr;
-    margin: auto;
-    margin-top: 20px;
-    padding: 1%;
-    width: 90%;
-    grid-gap: 20px
+    grid-template-rows: 100px 100px;
+    grid-gap: 10px;
 }
 
 .weather-parameters {
     grid-column: 1;
     grid-row: 1;
+}
+
+.max-min-temperature {
+    grid-column: 1;
+    grid-row: 2;
+}
+
+.forecast-container {
+    grid-column: 2;
+    grid-row: 1/3;
 }
 
 .weather-parameters svg {
