--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ header input {
 header input[type="text"] {
     color: #49484a;
     padding-right: 10px;
-    background: url(/images/search.svg) center left 97%;
+    background: url(../It-Academy/images/search.svg) center left 97%;
     background-repeat: no-repeat;
     font-family: "Poppins";
     font-weight: 500;
@@ -45,7 +45,7 @@ header input[type="text"] {
     width: 90%;
     height: 50%;
     background: center no-repeat;
-    background-image: url(/images/6220925.jpg);
+    background-image: url('../It-Academy/images/6220925.jpg');
     background-size: cover;
     border: solid 1px #99606A;
     display: flex;
